# PengyCPP

./: .gitignore  CMakeLists.txt  README.md  SPEC.md  build_deb.sh  build_linux.sh  build_macos.sh  build_windows.bat  chathistory.cpp  chathistory.h  chatmanager.cpp  chatmanager.h  chatview.cpp  chatview.h  chatworker.cpp  chatworker.h  check_release.sh  config.cpp  config.h  image_utils.cpp  image_utils.h  llmclient.cpp  llmclient.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  settingsdialog.cpp  settingsdialog.h  taskmanager.cpp  taskmanager.h  tasksdialog.cpp  tests.cpp  themehelper.h  tools.cpp  tools.h
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
appimage/: build.sh
build_test/: pengy  pengy_tests  pengy_web  version.h
build_test_cmake/: pengy_cli  pengy_tests  pengy_web
cli/: main.cpp
web/: main.cpp  web_resources.qrc  webchatworker.cpp  webchatworker.h  webserver.cpp  webserver.h
web/templates/: chat.html  settings.html
